SERVER-8931 Do not display stack trace on invalid cd() command